Hero Section and style initialization

--- a/src/index.html
+++ b/src/index.html
@@ -9,20 +9,66 @@ title: Certifications Master
        page title 
     =========================== -->
     <section class="page-title home-layout py-0 apple-bg">
-      <div class="container pt-170 header-cont">
-        <div class="row">
-          <div class="col-sm-12 col-lg-8">
-            <h1 class="header-h1 mt-40">Your Dream Job Is One Certification Away</h2>
-            <p class="header-sub mb-100">Without interfaces, you will lack architectures. Without micro-resource-constrained performance, you will lack architectures. What does 'long-term' really mean?</p>
-            <a href="#contact-form" class="btn btn__primary btn__primary-style2 btn__hi mr-30">Request a Quote</a>
-            <a href="#" class="link-btn">
-              <span class="color-white">Or, Explore Services</span>
-              <i class="icon-arrow-right color-white px-2"></i>
+      <div class="container pt-120 header-cont">
+        <div class="row  justify-content-center">
+          <div class="col-sm-12 text-center">
+            <h1 class="header-h1 mt-40">Risk-free IT Security<br>Like Never Before</h2>
+            <p class="mb-60 subhead">Without interfaces, you will lack architectures. Without micro-resource-constrained<br>performance you will lack architectures. What does 'long-term' really mean?</p>
+            <a href="#contact-form" class="btn btn__primary btn__hi mr-30">Request a Quote</a>
+            <a href="contact/" class="btn btn__primary btn__link">
+              <span>Request A Quote</span><i class="icon-arrow-right icon-outlined"></i>
             </a>
           </div><!-- /.col-xl-8 -->
         </div><!-- /.row -->
       </div><!-- /.container -->
     </section><!-- /.page-title -->
+
+
+    <!-- ======================
+    Features Layout 3
+    ========================= -->
+    <section class="features-layout3 pt-0 pb-90 bg-gray">
+      <div class="container">
+        <div class="row">
+          <div class="col-sm-12 col-md-12 col-lg-8">
+            <div class="row features-wrapper">
+              <!-- Feature item #1 -->
+              <div class="col-sm-4 feature-item">
+                <h4 class="feature-item__title">Software Asset</h4>
+                <p class="feature-item__desc">All aspects of your software assets including purchasing, deployment &
+                  maintenance.</p>
+                <a href="#"><i class="icon-arrow-right icon-outlined"></i></a>
+              </div><!-- /.feature-item -->
+              <!-- Feature item #2 -->
+              <div class="col-sm-4 feature-item">
+                <h4 class="feature-item__title">Enterprise Service</h4>
+                <p class="feature-item__desc">AExtend proven Tech best practices to HR, finance, and other service
+                  delivery areas.</p>
+                <a href="#"><i class="icon-arrow-right icon-outlined"></i></a>
+              </div><!-- /.feature-item -->
+              <!-- Feature item #3 -->
+              <div class="col-sm-4 feature-item">
+                <h4 class="feature-item__title">Custom Request</h4>
+                <p class="feature-item__desc">ABuild dynamic request templates with associated workflows, and tasks.</p>
+                <a href="#"><i class="icon-arrow-right icon-outlined"></i></a>
+              </div><!-- /.feature-item -->
+            </div><!-- /.row -->
+          </div><!-- /.col-lg-8 -->
+          <div class="col-sm-12 col-md-12 col-lg-4">
+            <div class="feature-item feature-item-custom bg-primary">
+              <div class="bg-img"><img src="assets/images/backgrounds/14.png" alt="backgrounds"></div>
+              <h4 class="feature-item__title">Thinking insights, verified driven research, and metrics data help you
+                make the right decisions!
+              </h4>
+              <a href="it-solutions.html" class="btn btn__white btn__link">
+                <span>Find Your Solution</span><i class="icon-arrow-right icon-outlined"></i>
+              </a>
+            </div>
+          </div><!-- /.col-lg-4 -->
+        </div><!-- /.row -->
+      </div><!-- /.container -->
+    </section><!-- /.Features Layout 3 -->
+
 
     <!-- ========================
       About Layout 5
