--- a/src/index.html
+++ b/src/index.html
@@ -17,7 +17,7 @@ title: Panacea IT Advisory
             
           </div>
           <div class="col-sm-12 header-buttons">
-            <a href="#contact-form" class="btn btn__primary btn__hi">Request a Quote</a>
+            <a href="#contact-form" class="btn btn__primary btn__hi">Contact Us</a>
             <a href="contact/" class="btn btn__primary btn__link ml-30">
               <span>Request A Quote</span><i class="icon-arrow-right icon-outlined"></i>
             </a>
@@ -278,7 +278,7 @@ title: Panacea IT Advisory
     <!-- ======================
     Features Layout 1
     ========================= -->
-    <section id="features" class="features-layout1 pt-130 pb-220">
+    <section id="features" class="features-layout1 pt-130" style="padding-bottom: 300px;">
       <div class="bg-img"><img src="assets/images/home/map.svg" alt="background"></div>
       <div class="container">
         <div class="row">
@@ -352,41 +352,15 @@ title: Panacea IT Advisory
     </section><!-- /.Features Layout 1 -->
 
     <!-- =========================
-           Banner layout 3
+    Banner layout 3
     =========================== -->
-    <section class="banner-layout3 pt-100 pb-0" style="margin-bottom: 0px;">
-      <div class="bg-img"><img src="assets/images/backgrounds/8.jpg" alt="background"></div>
-      <div class="container">
-        <div class="row">
-          <div class="col-sm-12 col-md-12 col-lg-12 col-xl-6">
-            <div class="banner-text">
-              <div class="heading-layout2 heading-light mb-40">
-                <h3 class="heading__title mb-30">Our Mission</h3>
-                <p class="heading__desc">Provide users with appropriate view and access permissions to requests,
-                  problems, changes, contracts, assets, solutions, and reports with our experienced professionals.
-                </p>
-              </div><!-- /.heading -->
-            </div>
-          </div><!-- /.col-xl-6 -->
-          <div class="col-sm-12 col-md-12 col-lg-12 col-xl-6 d-none d-xl-block">
-            <div class="banner-img">
-              <img src="assets/images/home/about.jpg" alt="banner" style="border-radius: 5px;">
-            </div>
-          </div><!-- /.col-xl-6 -->
-        </div><!-- /.row -->
-      </div><!-- /.container -->
-    </section><!-- /.Banner layout 3 -->
-
-        <!-- =========================
-           Banner layout 3
-    =========================== -->
-    <section class="banner-layout3 pt-100 pb-0" style="margin-bottom: 160px;">
+    <section class="pt-100 pb-0">
       <div class="container">
         <div class="row">
           <div class="col-sm-12 col-md-12 col-lg-12 col-xl-5">
             <div class="banner-text">
               <div class="heading-layout2 mb-40">
-                <h3 class="heading__title mb-30">Our Vision</h3>
+                <h3 class="heading__title mb-30">Mission & Vision</h3>
                 <p class="heading__desc">Provide users with appropriate view and access permissions to requests,
                   problems, changes, contracts, assets, solutions, and reports with our experienced professionals.
                 </p>
@@ -397,6 +371,63 @@ title: Panacea IT Advisory
       </div><!-- /.container -->
     </section><!-- /.Banner layout 3 -->
 
+
+
+    <!-- =========================
+       Banner layout 2
+      =========================== -->
+      <section class="banner-layout2 pt-0 pb-100 about-section">
+        <div class="container">
+          <div class="row">
+            <div class="col-sm-12 col-md-12 col-lg-12 col-xl-5">
+              <div class="banner-text">
+                <div class="heading-layout2 heading-light mb-40">
+                  <h3 class="heading__title mb-30 color-secondary">Our Values</h3>
+                  <p>Provide users with appropriate view and access permissions to requests,
+                    problems, changes, contracts, assets, solutions, and reports with our experienced professionals.
+                  </p>
+                </div><!-- /.heading -->
+                <a href="pricing.html" class="btn btn__secondary btn__bordered btn__hi mb-30">Pricing & Plans</a>
+              </div>
+            </div><!-- /.col-xl-6 -->
+            <div class="col-sm-12 col-md-12 col-lg-12 col-xl-7">
+              <div class="banner-img">
+                <img src="assets/images/banners/6.jpg" alt="banner">
+              </div>
+            </div><!-- /.col-xl-6 -->
+          </div><!-- /.row -->
+          <div class="row counters-wrapper counters-light mt-150">
+            <!-- counter item #1 -->
+            <div class="col-6 col-sm-6 col-md-3 col-lg-3">
+              <div class="counter-item">
+                <h4 class="counter">6,154</h4>
+                <p class="counter-item__desc">Projects And Software Developed in 2021</p>
+              </div><!-- /.counter-item -->
+            </div><!-- /.col-lg-3 -->
+            <!-- counter item #2 -->
+            <div class="col-6 col-sm-6 col-md-3 col-lg-3">
+              <div class="counter-item">
+                <h4 class="counter">2,512</h4>
+                <p class="counter-item__desc">Qualified Employees And Developers With Us</p>
+              </div><!-- /.counter-item -->
+            </div><!-- /.col-lg-3 -->
+            <!-- counter item #3 -->
+            <div class="col-6 col-sm-6 col-md-3 col-lg-3">
+              <div class="counter-item">
+                <h4 class="counter">1,784</h4>
+                <p class="counter-item__desc">Satisfied Clients We Have Served Globally</p>
+              </div><!-- /.counter-item -->
+            </div><!-- /.col-lg-3 -->
+            <!-- counter item #4 -->
+            <div class="col-6 col-sm-6 col-md-3 col-lg-3">
+              <div class="counter-item">
+                <h4 class="counter">0,25</h4>
+                <p class="counter-item__desc">Years Of Experience In The IT & Software Industry</p>
+              </div><!-- /.counter-item -->
+            </div><!-- /.col-lg-3 -->
+          </div><!-- /.row -->
+        </div><!-- /.container -->
+      </section><!-- /.Banner layout 2 -->
 
     <!-- ========================= 
       Testimonials layout 2
