Hero Image optimization with false bg

--- a/src/index.html
+++ b/src/index.html
@@ -8,7 +8,8 @@ title: Panacea IT Advisory
         <!-- ========================
        page title 
     =========================== -->
-    <section class="page-title home-layout py-0 apple-bg d-flex">
+    <section class="page-title home-layout py-0 tech-bg d-flex">
+      <div class="tech-bg-image"></div>
       <div class="container header-cont justify-content-center align-self-center">
         <div class="row hero-wrapper">
           <div class="col-sm-12">
