Added About & contact page

--- a/src/contact.html
+++ b/src/contact.html
@@ -7,18 +7,18 @@ title: Contact Us - Certifications Master
 <!-- ========================
         page title 
         =========================== -->
-        <section class="page-title page-title-layout14 text-center py-0">
-            <div class="container-fluid">
-                <div class="row align-items-center bg-contact">
-                <div class="col-sm-12 col-md-12 col-lg-10 offset-lg-1 pt-120">
-                    <h2 class="text-white font-weight-bold mb-50">Contact Us</h2>
-                    <p class="pagetitle__desc">We are experienced professionals who understand that It services is changing, and are true partners who care about your future business success.</p>
-                </div><!-- /.col-xl-8 -->
-                </div><!-- /.row -->
-            </div><!-- /.container -->
-        </section><!-- /.page-title -->
+    <section class="page-title page-title-layout14 text-center py-0">
+        <div class="container-fluid">
+            <div class="row align-items-center bg-contact">
+            <div class="col-sm-12 col-md-12 col-lg-10 offset-lg-1 pt-120">
+                <h2 class="font-weight-bold mb-50">Contact Us</h2>
+                <p class="pagetitle__desc color-secondary">We are experienced professionals who understand that It services is changing, and are true partners who care about your future business success.</p>
+            </div><!-- /.col-xl-8 -->
+            </div><!-- /.row -->
+        </div><!-- /.container -->
+    </section><!-- /.page-title -->
 
-        <section class="features-layout3 pt-0 pb-90 bg-gradient">
+        <section class="features-layout3 contact-items pt-0 pb-90">
             <div class="container">
               <div class="row">
                 <div class="col-sm-12 col-md-12">
@@ -48,28 +48,9 @@ title: Contact Us - Certifications Master
 <!-- ======================
     Features Layout 3
     ========================= -->
-    <section class="features-layout3 pb-90">
-        <div class="container">
-          <div class="row">
-              <div class="col-sm-12 col-md-12 col-lg-6 mb-30">
-                <h2 class="heading__subtitle color-body">Matching your needs, Delivering Perfection.</h2>
-                <h3 class="heading__title mb-30">Looking For Trainings In Bulk?<br>We Provide Custom<br><span class="underlined-text">Enterprise Solutions!</span>
-                </h3>
-              </div><!-- /.col-lg-8 -->
-              <div class="col-sm-12 col-md-12 col-lg-5 offset-lg-1 cta-banner-wrapper px-0">
-                <div class="whatsapp-banner mb-0">
-                  <h4 class="cta-banner__title text-white">Don't be shy.</h4>
-                  <p class="cta-banner__desc text-white">Have our support team assist you.</p>
-                  <div class="d-flex flex-wrap pt-20">
-                    <a href="#" class="btn btn__secondary btn__secondary-style2 btn__xl btn__block" >Contact us on Whatsapp <span style="font-size: 1.4em; margin-left: 8px;"><i class="fa fa-whatsapp" aria-hidden="true"></i></span></a>
-                  </div>
-                </div><!-- /.cta-banner -->
-              </div><!-- /.col-lg-6-->
-          </div><!-- /.row -->
-          
-        </div><!-- /.container -->
+    <section class="features-layout3 pb-90 pt-0">
         <div class="container-fluid">
-            <div class="row justify-content-center pt-150" style="background-image: linear-gradient(#fff,  #FDBA21); padding: 20px;">
+            <div class="row justify-content-center" style="padding: 20px;">
                 <h5 class="col-12 text-center">Looking for help? Drop your queries below!</h5>
                 <p  style="margin-bottom: 160px; text-align: center; color: #0b2653;"> We try to answer all queries within 24 hours.</p>
             </div>
